--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -5,3 +5,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 Werkzeug==2.0.2
+python-dotenv==0.19.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+
